Added project task endpoints
